<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TwitterTopics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tweets">Tweets</string>
    <string name="trend">trend</string>
    <string name="token">token</string>
    <string name="oauthUrl">https://api.twitter.com/oauth2/token</string>
    <string name="accessToken">accessToken</string>
    <string name="waiting">Waiting ...</string>
    <string name="loadingData">Loading data</string>
    <string name="name">name</string>
    <string name="statuses">statuses</string>
    <string name="user">user</string>
    <string name="text">text</string>
    <string name="profile_url">profile_image_url_https</string>
    <string name="url_twitter_api">api.twitter.com</string>
    <string name="url_tweets">https://api.twitter.com/1.1/search/tweets.json?</string>
    <string name="url_trends">https://api.twitter.com/1.1/trends/place.json?id=1</string>
    <string name="content">Content-type</string>
    <string name="result_type">recent</string>
    <string name="twitter_key">62JngIasUYkWoKQvg6mph3tmB</string>
    <string name="twitter_secret">vXQpBWGqLvMg5CVhvkD45gRL9IVt2cNTGSujQo63iI8lJ82bCT</string>
    <string name="count">10</string>
    <string name="id_str">id_str</string>
    <string name="twitter_api_version">1.1</string>
    <string name="action_bar_trend">Trends</string>
    <string name="tweets_about">116K Tweets about this trend</string>
    <string name="sharp">#</string>
    <string name="user_test">\@JSmith</string>
    <string name="speech_test"> La charla de la nueva guia de diseño para aplicaciones ruby que
        presentaron en la #RubyConf14 es genial</string>
    <string name="screenName">screenName</string>
    <string name="action_color">action_color</string>
    <string name="users">users</string>
    <string name="users_param">show.json</string>
    <string name="website_title">Web Site</string>
    <string name="description_title">Description</string>
    <string name="followers_caps">FOLLOWERS</string>
    <string name="following_caps">FOLLOWING</string>
    <string name="tweets_caps">TWEETS</string>
    <string name="description">description</string>
    <string name="favourites">favourites_count</string>
    <string name="followers">followersCount</string>
    <string name="background_image">profileBackgroundImageUrl</string>
    <string name="profile_url_http">profileImageUrl</string>
    <string name="url">url</string>
    <string name="statusesCount">statusesCount</string>
    <string name="searchMetadata">searchMetadata</string>
    <string name="nextResults">nextResults</string>
    <string name="image_profile_transition">image_transition</string>
    <string name="profile_image">profile_image</string>
    <string name="actionbar_transition">actionbar_transition</string>
    <string name="no_description">No description available</string>
    <string name="no_website">No website available</string>
    <string name="null_str">null</string>
    <string name="normal">normal</string>
    <string name="bigger">bigger</string>
    <string name="dummy">dummy</string>
    <string name="json_app">application/json</string>
    <string name="friendsCount">friendsCount</string>
    <string name="createdAt">createdAt</string>
    <string name="NoNetworkException">There is no network available</string>
    <string name="NoResponseFromHostError">There is no response from host</string>
</resources>
